--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -1,5 +1,35 @@
 ---
 layout: layouts/base.njk
-templateClass: tmpl-home
+templateClass: home
 ---
-{{ content | safe }}
+
+<header class="header-with-banner">
+    {% include "partials/menu.njk" %}
+    <div class="banner">
+        <div>
+            <h1>Editions with Future</h1>
+            <h2>Rooted in standards, built by a community, meant to last</h2>
+        </div>
+    </div>
+</header>
+
+<main class="container {{ templateClass }}">
+    {{ content | safe }}
+</main>
+
+<footer></footer>
+
+<!-- Current page: {{ page.url | url }} -->
+<!--script>
+    document.addEventListener('DOMContentLoaded', function() {
+    window.addEventListener('scroll', function() {
+        const winTop = window.pageYOffset;
+        console.log('scrolling %s', winTop);
+        if (winTop > 30) {
+        document.body.classList.add('sticky');
+        } else {
+        document.body.classList.remove('sticky');
+        }
+    });
+    });
+</script-->
