--- a/css/index.css
+++ b/css/index.css
@@ -2,32 +2,11 @@
 :root {
   --font-family: -apple-system, system-ui, sans-serif;
   --font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
-}
-
-/* Theme colors */
-:root {
-  --color-gray-20: #e0e0e0;
-  --color-gray-50: #C0C0C0;
-  --color-gray-90: #333;
-
-  --background-color: #fff;
-
-  --text-color: var(--color-gray-90);
-  --text-color-link: #082840;
-  --text-color-link-visited: #17050F;
+  --banner-image: url("/img/banner.jpg");
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-gray-20: #e0e0e0;
-    --color-gray-50: #C0C0C0;
-    --color-gray-90: #dad8d8;
-
-    /* --text-color is assigned to --color-gray-_ above */
-    --text-color-link: #1493fb;
-    --text-color-link-visited: #a6a6f8;
-
-    --background-color: #15202b;
   }
 }
 
@@ -59,22 +38,31 @@ p,
   line-height: 1.45;
 }
 
-a[href] {
-  color: var(--text-color-link);
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  width: 100%;
+  background-image: var(--banner-image);
 }
-a[href]:visited {
-  color: var(--text-color-link-visited);
+
+.header-with-banner {
+  height: 384px;
 }
 
 main {
-  padding: 1rem;
+  padding-top: 64px;
+  margin-top: 20px;
 }
-main :first-child {
-  margin-top: 0;
+
+main.home {
+  padding-top: 384px;
 }
-header {
-  border-bottom: 1px dashed var(--color-gray-20);
-}
+
 header:after {
   content: "";
   display: table;
@@ -116,106 +104,68 @@ code {
   word-break: break-all;
 }
 
-/* Header */
-.home {
-  padding: 0 1rem;
-  float: left;
-  margin: 1rem 0; /* 16px /16 */
-  font-size: 1em; /* 16px /16 */
-}
 .home :link:not(:hover) {
   text-decoration: none;
 }
 
-/* Nav */
-.nav {
-  padding: 0;
-  list-style: none;
-  float: left;
-  margin-left: 1em;
-}
-.nav-item {
-  display: inline-block;
-  margin-right: 1em;
-}
-.nav-item a[href]:not(:hover) {
-  text-decoration: none;
-}
-.nav-item-active {
-  font-weight: 700;
-  text-decoration: underline;
+.navbar, .banner {
+  background-color: rgba(0, 0, 0, .25);
+  color: #F0F0F0;
 }
 
-/* Posts list */
-.postlist {
-  list-style: none;
-  padding: 0;
+nav.navbar {
+  --bs-navbar-brand-margin-end: 60px;
+  --bs-navbar-active-color: var(--bs-light);
 }
-.postlist-item {
+
+ul.navbar-nav {
+  --bs-nav-link-color: var(--bs-light);
+}
+
+.navbar-brand img {
+  height: 64px;
+}
+
+/* banner */
+.banner {
+  height: 844px;
+  width: 100%;
+  text-align: center;
+  flex: 2;
   display: flex;
-  flex-wrap: wrap;
-  align-items: baseline;
-  counter-increment: start-from -1;
-  line-height: 1.8;
-}
-.postlist-item:before {
-  display: inline-block;
-  pointer-events: none;
-  content: "" counter(start-from, decimal-leading-zero) ". ";
-  line-height: 100%;
-  text-align: right;
-}
-.postlist-date,
-.postlist-item:before {
-  font-size: 0.8125em; /* 13px /16 */
-  color: var(--color-gray-90);
-}
-.postlist-date {
-  word-spacing: -0.5px;
-}
-.postlist-link {
-  padding-left: .25em;
-  padding-right: .25em;
-  text-underline-position: from-font;
-  text-underline-offset: 0;
-  text-decoration-thickness: 1px;
-}
-.postlist-item-active .postlist-link {
-  font-weight: bold;
-}
-.tmpl-home .postlist-link {
-  font-size: 1.1875em; /* 19px /16 */
-  font-weight: 700;
-}
-
-
-/* Tags */
-.post-tag {
-  display: inline-flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  text-transform: uppercase;
-  font-size: 0.75em; /* 12px /16 */
-  padding: 0.08333333333333em 0.3333333333333em; /* 1px 4px /12 */
-  margin-left: 0.6666666666667em; /* 8px /12 */
-  margin-top: 0.5em; /* 6px /12 */
-  margin-bottom: 0.5em; /* 6px /12 */
-  color: var(--color-gray-90);
-  border: 1px solid var(--color-gray-50);
-  border-radius: 0.25em; /* 3px /12 */
-  text-decoration: none;
-  line-height: 1.8;
 }
-a[href].post-tag,
-a[href].post-tag:visited {
-  color: inherit;
+
+.sticky .banner div {
+  height: 0;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
-a[href].post-tag:hover,
-a[href].post-tag:focus {
-  background-color: var(--color-gray-20);
+
+.sticky {
+  padding-top: 64px;
 }
-.postlist-item > .post-tag {
-  align-self: center;
+
+.banner h1 {
+  font-family: 'Lora', sans-serif;
+  font-size: 5.8em;
+  margin-bottom: 0;
+}
+.banner h2 {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 300;
+  font-weight: 2.5em;
+}
+
+.posts {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  column-gap: 20px;
+  row-gap: 20px;
+  column-fill: auto;
 }
 
 /* Infobox */
@@ -235,22 +185,4 @@ a[href].post-tag:focus {
 }
 .infobox ol:only-child {
   margin: 0;
-}
-
-/* Direct Links / Markdown Headers */
-.direct-link {
-  font-family: sans-serif;
-  text-decoration: none;
-  font-style: normal;
-  margin-left: .1em;
-}
-a[href].direct-link,
-a[href].direct-link:visited {
-  color: transparent;
-}
-a[href].direct-link:focus,
-a[href].direct-link:focus:visited,
-:hover > a[href].direct-link,
-:hover > a[href].direct-link:visited {
-  color: #aaa;
 }
