--- a/index.njk
+++ b/index.njk
@@ -3,11 +3,12 @@ layout: layouts/home.njk
 eleventyNavigation:
   key: Home
   order: 1
+show: 9
 ---
 
-{% set maxPosts = collections.posts.length | min(8) %}
+{% set maxPosts = collections.posts.length | min(show) %}
 <h1>Latest {% if maxPosts == 1 %}Post{% else %}{{ maxPosts }} Posts{% endif %}</h1>
 
-{% set postslist = collections.posts | head(-8) %}
+{% set postslist = collections.posts | head(-show) %}
 {% set postslistCounter = collections.posts | length %}
 {% include "postslist.njk" %}
