--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -2,7 +2,7 @@
   {% for post in postslist | reverse %}
     <div class="card {% if post.url == url %} active{% endif %}">
       {% if post.data.coverImage %}
-      <img class="card-img-top" src="/img/{{post.data.coverImage}}">
+      <img class="card-img-top" src="{{ '/' | url }}img/{{post.data.coverImage}}">
       {% endif %}
       <div class="card-body">
         <h3 class="card-title">
