--- a/css/index.css
+++ b/css/index.css
@@ -77,6 +77,7 @@ main {
 main.home {
   padding-top: 20px;
   min-height: calc(100vh - 90px);
+  background: rgba(255, 255, 255, .80);
 }
 
 header:after {
@@ -160,23 +161,16 @@ ul.navbar-nav {
   font-weight: 300;
   font-weight: 2.5em;
 }
-.banner .intro-text {
-  position: absolute;
+
+.intro-text {
   font-size: 1.2rem;
-  bottom: 10px;
-  width: 100%;
-  text-align: left;
-}
-.intro-text p, .intro-text a {
-  max-width: 60rem;
-  margin: 0 auto;
-}
-.intro-text a, .into-text a:link {
-  color: var(--bs-white);
-  display: block;
-  text-align: right;
 }
 
+.blog {
+  margin-top: 3rem;
+  padding-top: 2rem;
+  border-top: 2px solid rgba(0, 0, 0, .20);
+}
 .posts {
   display: grid;
   grid-template-columns: repeat(3, 33%);
