--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -10,6 +10,9 @@ templateClass: home
 </header>
 {% include "partials/banner.njk" %}
 <main class="container {{ templateClass }}">
+    <div class="d-lg-none">
+        {% include "partials/intro.njk" %}
+    </div>
     {{ content | safe }}
 </main>
 
