--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
 /* Defaults */
 :root {
-  --font-family-headings: "Lora", serif;
-  --font-family-body: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
-  --font-family-banner: "Nunito", sans-serif;
-  --bs-link-color: #f5a623;
-  --bs-link-hover-color: #f5a623;
+  --font-family-headings: "Zilla Slab", serif;
+  --font-family-body: "Lato", sans-serif;
+  --color-highlight: #ffc108;
+  --bs-link-color: #cb9a08;
+  --bs-link-hover-color: #cb9a08;
   --banner-image: url("../img/banner.jpg");
-  --banner-height: calc(100vh - 30vh - 90px);
+  --banner-height: 640px; /* calc(100vh - 30vh - 90px); */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,16 +16,38 @@
 
 
 /* Global stylesheet */
-html,
+html {
+  font-size: 125%;
+}
+
 body {
   padding: 0;
   margin: 0;
+  font-weight: 300;
+  line-height: 1.75;
+  font-family: var(--font-family-body);
   --bs-body-font-family: var(--font-family-body);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
   font-family: var(--font-family-headings);
+  font-weight: 300;
+  line-height: 1.3;
 }
+
+h1 {
+  margin-top: 0;
+  font-size: 2.488rem;
+}
+
+h2 {font-size: 2.074rem;}
+
+h3 {font-size: 1.728rem;}
+
+h4 {font-size: 1.44rem;}
+
+h5 {font-size: 1.2rem;}
 
 a[href]:link {
   text-decoration: none;
@@ -149,30 +171,56 @@ ul.navbar-nav {
 .banner > div {
   background-color: rgba(0, 0, 0, .40);
   height: 100%;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; */
   text-align: center;
+}
+
+.banner .hero {
+  position: absolute;
+  top: 150px;
+  left: 0;
+  right: 0;
 }
 
 .banner h1 {
   font-family: var(--font-family-headings);
   font-size: 5.8em;
   margin-bottom: 0;
+  line-height: 1;
 }
 .banner h2 {
-  font-family: var(--font-family-banner);
-  font-weight: 300;
-  font-weight: 2.5em;
+  font-family: var(--font-family-body);
+  font-weight: 400;
+  font-style: normal;
 }
 
-.intro-text {
+.shortcut {
+  display: flex;
+  padding: 10px 8px;
+  color:rgba(255, 255, 255, .80);
+  background-color:rgba(0, 0, 0, .40);
+}
+.shortcut span {
+  display: block;
+  margin-left: 1em;
+}
+
+.initial {
+  color: var(--bs-link-color);
+}
+
+.banner .intro-text {
   position: absolute;
   bottom: 0;
-  font-size: 1.2rem;
   display: flex;
   width: 100%;
   justify-content: center;
+}
+
+.intro-text .btn-warning {
+  --bs-btn-bg: #ffc10760;
 }
 
 .intro-text ul {
