--- a/_includes/layouts/content.njk
+++ b/_includes/layouts/content.njk
@@ -7,6 +7,7 @@ layout: layouts/base.njk
 </header>
 
 <main class="container {{ templateClass }}">
+    {% block top %}{% endblock %}
     <h1>{{ title }}</h1>
     {{ content | safe }}
 </main>
