--- a/_includes/partials/menu.njk
+++ b/_includes/partials/menu.njk
@@ -1,3 +1,20 @@
+{% macro renderNavListItem(entry) -%}
+    {%- if entry.children.length -%}
+    <li class="nav-item dropdown">
+        <a class="dropdown-toggle nav-link{% if entry.url == page.url %} active{% endif %}"
+            data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{ entry.title }}</a>
+        <ul class="dropdown-menu">
+            {%- for child in entry.children %}{{ renderNavListItem(child) }}{% endfor -%}
+        </ul>
+    </li>
+    {%- else -%}
+    <li class="nav-item">
+        <a href="{{ entry.url | url }}" class="nav-link{% if entry.url == page.url %} active{% endif %}">{{ entry.title }}</a>
+    </li>
+    {%- endif -%}
+{%- endmacro %}
+
+{% set navPages = collections.all | eleventyNavigation %}
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ '/' | url }}"><img src="{{ '/' | url }}img/e-editiones-logo-color.svg"></a>
@@ -5,25 +22,12 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            {% set navPages = collections.all | eleventyNavigation %}
-            {% macro renderNavListItem(entry) -%}
-            {%- if entry.children.length -%}
-            <li class="nav-item dropdown">
-                <a class="dropdown-toggle nav-link{% if entry.url == page.url %} active{% endif %}"
-                    data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{ entry.title }}</a>
-                <ul class="dropdown-menu">
-                    {%- for child in entry.children %}{{ renderNavListItem(child) }}{% endfor -%}
-                </ul>
-            </li>
-            {%- else -%}
-            <li class="nav-item">
-                <a href="{{ entry.url | url }}" class="nav-link{% if entry.url == page.url %} active{% endif %}">{{ entry.title }}</a>
-            </li>
-            {%- endif -%}
-            {%- endmacro %}
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            {%- for entry in navPages %}{{ renderNavListItem(entry) }}{%- endfor -%}
+                {%- for entry in navPages %}{{ renderNavListItem(entry) }}{%- endfor -%}
+                <li class="nav-item">
+                    <a href="/tags/events/" class="nav-link{% if '/tags/events/' == page.url %} active{% endif %}">Events</a>
+                </li>
             </ul>
         </nav>
     </div>
