--- a/tags-list.njk
+++ b/tags-list.njk
@@ -1,10 +1,7 @@
 ---
+layout: layouts/content.njk
 permalink: /tags/
-layout: layouts/home.njk
 ---
 <h1>Tags</h1>
 
-{% for tag in collections.tagList %}
-  {% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
-  <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
-{% endfor %}
+{% include "partials/tagcloud.njk" %}
