--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -1,8 +1,8 @@
 <div class="intro-text">
     <div>
-        <p><strong>International non profit society</strong> gathering 
+        <p>We are an <strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
-        and individuals<br/><strong>Empower</strong> digital projects by promoting 
+        scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
         <ul>
