--- a/_includes/partials/banner.njk
+++ b/_includes/partials/banner.njk
@@ -8,7 +8,7 @@
                 <button class="btn btn-warning">Join</button>
             </div>
         </div>
-        <div class="d-none d-lg-block">
+        <div class="container d-none d-lg-block">
         {% include "partials/intro.njk" %}
         </div>
     </div>
