--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -1,29 +1,29 @@
-<div class="intro-text">
-    <div>
+<div class="intro-text container">
+    <div class="row justify-content-md-center m-3">
         <p>We are an <strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
         scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
-        <ul>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                <img src="img/poet-svgrepo-com.svg" height="32">
-                <span>researchers</span>
-                </a>
-            </li>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                    <img src="img/university-svgrepo-com.svg" height="32">
-                    <span>memory institutions</span>
-                </a>
-            </li>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                    <img src="img/school-material-svgrepo-com.svg" height="32">
-                    <span>developers</span>
-                </a>
-            </li>
-        </ul>
+    </div>
+    <div class="row justify-content-md-center m-3 gx-5">
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+            <img src="img/poet-svgrepo-com.svg" height="32">
+            <span>researchers</span>
+            </a>
+        </div>
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+                <img src="img/university-svgrepo-com.svg" height="32">
+                <span>memory institutions</span>
+            </a>
+        </div>
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+                <img src="img/school-material-svgrepo-com.svg" height="32">
+                <span>developers</span>
+            </a>
+        </div>
     </div>
 </div>
