Add projects map

--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -1,6 +1,6 @@
 <div class="intro-text container">
     <div class="row justify-content-md-center m-3">
-        <p>We are an <strong>International non profit society</strong> gathering 
+        <p>We are an <strong>international non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
         scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
