--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -2,9 +2,18 @@
 layout: layouts/base.njk
 templateClass: home
 ---
-{% block scripts%}
+{% block scripts %}
 <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
+<script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+<script src="{{ '/scripts/map.js' | url }}"></script>
 {% endblock %}
+{% block styles %}
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="">
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
+{% endblock %}
+
 <header>
     {% include "partials/menu.njk" %}
 </header>
@@ -19,6 +28,9 @@ templateClass: home
             <aside class="col-4">
                 <h3>Tags</h3>
                 {% include "partials/tagcloud.njk" %}
+
+                <h3>Projects Map <small class="text-muted"><a href="/map/">Expand</a></small></h3>
+                <div id="map" data-zoom="5"></map>
             </aside>
         </div>
     </div>
