--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,11 @@ h4 {font-size: 1.44rem;}
 
 h5 {font-size: 1.2rem;}
 
+h3 small {
+  font-size: var(--font-size-small);
+  vertical-align: super;
+}
+
 a[href]:link {
   text-decoration: none;
 }
@@ -340,3 +345,38 @@ ul.cloud a[data-weight="9"] { --size: 16; }
 ul.cloud li:nth-child(2n+1) a { --color: var(--color-1); }
 ul.cloud li:nth-child(3n+1) a { --color: var(--bs-link-color); }
 ul.cloud li:nth-child(4n+1) a { --color: var(--color-2); }
+
+.home #map {
+  width: 100%;
+  height: 320px;
+}
+
+/* TEI Publisher registry */
+.registry {
+  display: grid;
+  grid-template-columns: 1fr minmax(50vw, auto);
+  height: calc(100vh);
+  padding-top: 97px;
+  margin-top: 0;
+}
+
+.registry section {
+  overflow: auto;
+  padding: 30px 1rem;
+}
+
+.registry ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.registry #map {
+  width: 100%;
+  height: 100%;
+}
+
+#map h4 {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
