Add search facility

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -26,6 +26,14 @@ templateClass: home
         <div class="row gx-5">
             <div class="col">{{ content | safe }}</div>
             <aside class="col-4">
+                <form action="/search" class="search-form">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Query" aria-label="Query"
+                            aria-describedby="search-addon" name="query">
+                        <button id="search-button" class="btn btn-primary" type="submit">Search</button>
+                    </div>
+                </form>
+
                 <h3>Tags</h3>
                 {% include "partials/tagcloud.njk" %}
 
