--- a/_includes/partials/menu.njk
+++ b/_includes/partials/menu.njk
@@ -29,6 +29,6 @@
                     <a href="/tags/events/" class="nav-link{% if '/tags/events/' == page.url %} active{% endif %}">Events</a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </div>
 </nav>
