Add sidebar to archive and tags page

--- a/archive.njk
+++ b/archive.njk
@@ -1,12 +1,11 @@
 ---
-layout: layouts/content.njk
+title: Archive
+layout: layouts/content-sidebar.njk
 permalink: /posts/
 eleventyNavigation:
   key: Archive
   order: 3
 ---
-
-<h1>Archive</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
