draft for "researchers" page

--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -8,7 +8,7 @@
     </div>
     <div class="row justify-content-md-center m-3 gx-5">
         <div class="col">
-            <a href="pages/home/" class="shortcut btn">
+            <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
             <span>researchers</span>
             </a>
