Switch logo depending on background

--- a/_includes/partials/menu.njk
+++ b/_includes/partials/menu.njk
@@ -17,7 +17,7 @@
 {% set navPages = collections.all | eleventyNavigation %}
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ '/' | url }}"><img src="{{ '/' | url }}img/e-editiones-logo-color.svg"></a>
+        <a class="navbar-brand" href="{{ '/' | url }}"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
