Adjust mobile view

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -23,15 +23,15 @@ templateClass: home
         <div class="row d-lg-none">
             {% include "partials/intro.njk" %}
         </div>
-        <div class="row gx-5">
+        <div class="row gx-lg-5">
             <div class="col">{{ content | safe }}</div>
-            <aside class="col-4">
+            <aside class="col-md-4">
                 {% include "partials/sidebar.njk" %}
 
                 <h3>Projects Map <small class="text-muted"><a href="/map/">Expand</a></small></h3>
                 <div id="map" data-zoom="5"></div>
 
-                <div class="twitter">
+                <div class="twitter d-none d-lg-block">
                     <a class="twitter-timeline" href="https://twitter.com/EEditiones" data-tweet-limit="5" data-chrome="noborders">Tweets by EEditiones</a> 
                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
