--- a/_includes/partials/banner.njk
+++ b/_includes/partials/banner.njk
@@ -2,7 +2,7 @@
     <div>
         <div class="hero">
             <h1><span class="initial">e</span>ditions with <span class="initial">f</span>uture</h1>
-            <p>rooted in standards, built by a community, meant to last</p>
+            <p class="m-2">rooted in standards, built by a community, meant to last</p>
             <div>
                 <button class="btn btn-warning">Donate</button>
                 <button class="btn btn-warning">Join</button>
