--- a/css/index.css
+++ b/css/index.css
@@ -218,6 +218,13 @@ ul.navbar-nav {
   margin-bottom: 0;
   line-height: 1;
 }
+
+@media (max-width: 375px) {
+  .banner h1 {
+    font-size: 2.488rem;
+  }
+}
+
 .banner h2 {
   font-family: var(--font-family-body);
   font-weight: 400;
@@ -366,6 +373,7 @@ ul.cloud li:nth-child(4n+1) a { --color: var(--color-2); }
 .home #map {
   width: 100%;
   height: 320px;
+  border: 1px solid #dee2e6;
 }
 
 /* TEI Publisher registry */
