--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -32,7 +32,7 @@ templateClass: home
                 <div id="map" data-zoom="5"></div>
 
                 <div class="twitter d-none d-lg-block">
-                    <a class="twitter-timeline" href="https://twitter.com/EEditiones" data-tweet-limit="5" data-chrome="noborders">Tweets by EEditiones</a> 
+                    <a class="twitter-timeline" href="https://twitter.com/EEditiones" data-tweet-limit="{{metadata.twitter.limit}}" data-chrome="noborders">Tweets by EEditiones</a> 
                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </aside>
@@ -40,7 +40,7 @@ templateClass: home
     </div>
 </main>
 
-<footer></footer>
+{% include "partials/footer.njk" %}
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
